# stm32l0xx-hal

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-0BSD.txt  README.md  RELEASING.md  build.rs  flash.sh  gdb_session.sh  memory.x  memory_l0x0.x  memory_l0x1.x  openocd.cfg  openocd.gdb  openocd_session.sh  serial.hex
.cargo/: config
.github/: CODEOWNERS
.github/workflows/: ci.yaml
examples/: adc.rs  adc_cont.rs  adc_dma.rs  adc_multi.rs  adc_pwm.rs  adc_trig.rs  aes-dma.rs  aes.rs  aes_cbc.rs  aes_ctr.rs  aes_ctr_dma.rs  aes_ecb.rs  blinky.rs  blinky_delay.rs  blinky_downgrade.rs  button.rs  button_irq.rs  button_irq_rtfm.rs  button_irq_rtic.rs  crc.rs  exti_wakeup.rs  flash.rs  i2c.rs  i2c_dma.rs  linked_timer_rtic.rs  lptim.rs  mco.rs  pwm.rs  pwr.rs  rng.rs  rtc.rs  rtc_low_apb1.rs  rtc_wakeup.rs  serial.rs  serial_dma.rs  serial_dma_async.rs  serial_lse.rs  spi.rs  spi2.rs  spi_dma.rs  (+7 more)
flash-code/: .gitignore  README.md  compile.sh  flash.c
src/: adc.rs  aes.rs  bb.rs  calibration.rs  crc.rs  delay.rs  dma.rs  encoder.rs  exti.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  lptim.rs  mco.rs  prelude.rs  pwm.rs  pwr.rs  rcc.rs  rng.rs  rtc.rs  serial.rs  signature.rs  spi.rs  syscfg.rs  time.rs  timer.rs  usb.rs  watchdog.rs
src/exti/: line.rs
src/rcc/: enable.rs
