[package]
edition = "2018"
authors = [
    "Arko <arko2600@gmail.com>",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
description = "Peripheral access API for STM32L0 series microcontrollers"
documentation = "https://docs.rs/crate/stm32l0xx-hal"

keywords = [
    "arm",
    "cortex-m",
    "stm32l0xx",
    "hal",
]
license = "0BSD"
name = "stm32l0xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32l0xx-hal"
version = "0.3.1"

[package.metadata.docs.rs]
features = ["stm32l0x1", "rt"]

[dependencies]
as-slice = "0.1.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m = {version = "0.6.0", features = ["const-fn"] }
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.2"
void = { version = "1.0.2", default-features = false }
cast = { version = "0.2.2", default-features = false }
nb = "0.1.2"

[dependencies.stm32l0]
version = "0.8.0"

[dev-dependencies]
aligned = "0.3.1"
heapless = "0.5.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"
cortex-m-rtfm = "0.4.3"

[features]
# Miscellaneaous features
rt = ["stm32l0/rt"]
# MCUs
stm32l0x1 = ["stm32l0/stm32l0x1"]
stm32l0x2 = ["stm32l0/stm32l0x2"]
stm32l0x3 = ["stm32l0/stm32l0x3"]
stm32l052 = ["stm32l0x2"]
stm32l053 = ["stm32l0x3"]
stm32l062 = ["stm32l0x2"]
stm32l072 = ["stm32l0x2"]
stm32l082 = ["stm32l0x2"]
# Chip packages
lqfp32   = []
lqfp48   = []
lqfp64   = []
lqfp100  = []
tfbga64  = []
ufbga64  = []
ufbg100  = []
ufqfpn32 = []
ufqfpn48 = []
wlcsp36  = []
wlcsp49  = []


[profile.dev]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"

[profile.release]
codegen-units = 1
lto = true
debug = true
opt-level = "s"


[[example]]
name = "aes_ecb"
required-features = ["stm32l082"]

[[example]]
name = "aes_cbc"
required-features = ["stm32l082"]

[[example]]
name = "aes_ctr"
required-features = ["stm32l082"]

[[example]]
name = "aes_ctr_dma"
required-features = ["stm32l082"]

[[example]]
name = "button_irq"
required-features = ["rt"]

[[example]]
name = "button_irq_rtfm"
required-features = ["rt"]

[[example]]
name = "i2c_dma"
required-features = ["rt","stm32l0x2"]

[[example]]
name = "rtc"
required-features = ["stm32l0x2"]

[[example]]
name = "serial_dma"
required-features = ["stm32l0x2"]

[[example]]
name = "serial_dma_async"
required-features = ["stm32l0x2"]

[[example]]
name = "timer"
required-features = ["rt"]

[[example]]
name = "timer_interrupt_rtfm"
required-features = ["rt"]

[[example]]
name = "adc_pwm"
required-features = ["stm32l0x1"]
