[package]
edition = "2018"
authors = [
    "Arko <arko2600@gmail.com>",
    "Hanno Braun <hanno@braun-odw.eu>",
    "Danilo Bargen <mail@dbrgn.ch>",
    "James Waples <james@wapl.es>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32L0 series microcontrollers"
documentation = "https://docs.rs/crate/stm32l0xx-hal"

keywords = ["arm", "cortex-m", "stm32l0xx", "hal"]
license = "0BSD"
name = "stm32l0xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32l0xx-hal"
version = "0.10.0"

[package.metadata.docs.rs]
features = ["mcu-STM32L071KBTx", "rt", "stm32-usbd", "rtc"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
as-slice = "0.2.1"
cast = { version = "0.3.0", default-features = false }
cortex-m = "0.7.0"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.3", features = ["unproven"] }
embedded-time = "0.12.0"
nb = "1.0.0"
rtcc = { version = "0.3.0", optional = true }
stm32l0 = "0.15.1"
stm32-usbd = { version = "0.6.0", optional = true }
void = { version = "1.0.2", default-features = false }

[dev-dependencies]
aligned = "0.4.1"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
heapless = "0.7.1"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
usb-device = "0.2.3"
usbd-serial = "0.1.0"

[features]
# Default features
default = ["rtc"]

# Support for RTC, pulls in rtcc and chrono dependencies
rtc = ["rtcc"]

# Miscellaneaous features
rt = ["stm32l0/rt"]
disable-linker-script = []

# STM32L0 subfamilies
# (Warning: Some peripherals, e.g. GPIO, don't follow this subfamily grouping.)
stm32l0x1 = ["stm32l0/stm32l0x1"]
stm32l0x2 = ["stm32l0/stm32l0x2"]
stm32l0x3 = ["stm32l0/stm32l0x3"]

# Legacy features (don't use those anymore)
stm32l052 = ["stm32l0x2"]
stm32l072 = ["stm32l0x2"]
stm32l082 = ["stm32l0x2"]

# Features based on the GPIO peripheral version.
# This determines the pin function mapping of the MCU.
# The features correspond to the product categories.
#
# Note: The easiest way to pick the proper io-* feature is to apply
# the matching mcu-* feature for your MCU!
io-STM32L021 = [] # Product category 1
io-STM32L031 = [] # Product category 2
io-STM32L051 = [] # Product category 3
io-STM32L071 = [] # Product category 5

# Features based on EEPROM size (in bytes)
eeprom-128 = []
eeprom-256 = []
eeprom-512 = []
eeprom-1024 = []
eeprom-2048 = []
eeprom-3072 = []
eeprom-6144 = []

# Features based on Flash size (in kbytes)
flash-8 = []
flash-16 = []
flash-32 = []
flash-64 = []
flash-128 = []
flash-192 = []

# Features based on RAM size (in kbytes)
ram-2 = []
ram-8 = []
ram-20 = []

# Physical packages
ewlcsp49 = []
lqfp32 = []
lqfp48 = []
lqfp64 = []
lqfp100 = []
tfbga64 = []
tssop14 = []
tssop20 = []
ufbga64 = []
ufbga100 = []
ufqfpn20 = []
ufqfpn28 = []
ufqfpn32 = []
ufqfpn48 = []
wlcsp25 = []
wlcsp36 = []
wlcsp49 = []

# MCU aliases
#
# Note: These are just aliases, they should not be used to directly feature gate
# functionality in the HAL! However, user code should usually depend on a MCU alias.
mcu-STM32L010C6Tx = ["lqfp48", "io-STM32L031", "eeprom-256", "flash-32", "ram-8"]
mcu-STM32L010F4Px = ["tssop20", "io-STM32L021", "eeprom-128", "flash-16", "ram-2"]
mcu-STM32L010K4Tx = ["lqfp32", "io-STM32L021", "eeprom-128", "flash-16", "ram-2"]
mcu-STM32L010K8Tx = ["lqfp32", "io-STM32L051", "eeprom-256", "flash-64", "ram-8"]
mcu-STM32L010R8Tx = ["lqfp64", "io-STM32L051", "eeprom-256", "flash-64", "ram-8"]
mcu-STM32L010RBTx = ["lqfp64", "io-STM32L071", "eeprom-512", "flash-128", "ram-20"]
mcu-STM32L011D3Px = ["stm32l0x1", "tssop14", "io-STM32L021", "eeprom-512", "flash-8", "ram-2"]
mcu-STM32L011D4Px = ["stm32l0x1", "tssop14", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L011E3Yx = ["stm32l0x1", "wlcsp25", "io-STM32L021", "eeprom-512", "flash-8", "ram-2"]
mcu-STM32L011E4Yx = ["stm32l0x1", "wlcsp25", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L011F3Px = ["stm32l0x1", "tssop20", "io-STM32L021", "eeprom-512", "flash-8", "ram-2"]
mcu-STM32L011F3Ux = ["stm32l0x1", "ufqfpn20", "io-STM32L021", "eeprom-512", "flash-8", "ram-2"]
mcu-STM32L011F4Px = ["stm32l0x1", "tssop20", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L011F4Ux = ["stm32l0x1", "ufqfpn20", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L011G3Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L021", "eeprom-512", "flash-8", "ram-2"]
mcu-STM32L011G4Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L011K3Tx = ["stm32l0x1", "lqfp32", "io-STM32L021", "eeprom-512", "flash-8", "ram-2"]
mcu-STM32L011K3Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L021", "eeprom-512", "flash-8", "ram-2"]
mcu-STM32L011K4Tx = ["stm32l0x1", "lqfp32", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L011K4Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L021D4Px = ["stm32l0x1", "tssop14", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L021F4Px = ["stm32l0x1", "tssop20", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L021F4Ux = ["stm32l0x1", "ufqfpn20", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L021G4Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L021K4Tx = ["stm32l0x1", "lqfp32", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L021K4Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L021", "eeprom-512", "flash-16", "ram-2"]
mcu-STM32L031C4Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L031C4Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L031C6Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L031C6Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L031E4Yx = ["stm32l0x1", "wlcsp25", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L031E6Yx = ["stm32l0x1", "wlcsp25", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L031F4Px = ["stm32l0x1", "tssop20", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L031F6Px = ["stm32l0x1", "tssop20", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L031G4Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L031G6Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L031G6UxS = ["stm32l0x1", "ufqfpn28", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L031K4Tx = ["stm32l0x1", "lqfp32", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L031K4Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L031K6Tx = ["stm32l0x1", "lqfp32", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L031K6Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041C4Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024", "flash-16", "ram-8"]
mcu-STM32L041C6Tx = ["stm32l0x1", "lqfp48", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041C6Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041E6Yx = ["stm32l0x1", "wlcsp25", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041F6Px = ["stm32l0x1", "tssop20", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041G6Ux = ["stm32l0x1", "ufqfpn28", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041G6UxS = ["stm32l0x1", "ufqfpn28", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041K6Tx = ["stm32l0x1", "lqfp32", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L041K6Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L031", "eeprom-1024", "flash-32", "ram-8"]
mcu-STM32L051C6Tx = ["stm32l0x1", "lqfp48", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L051C6Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L051C8Tx = ["stm32l0x1", "lqfp48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L051C8Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L051K6Tx = ["stm32l0x1", "lqfp32", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L051K6Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L051K8Tx = ["stm32l0x1", "lqfp32", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L051K8Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L051R6Hx = ["stm32l0x1", "tfbga64", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L051R6Tx = ["stm32l0x1", "lqfp64", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L051R8Hx = ["stm32l0x1", "tfbga64", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L051R8Tx = ["stm32l0x1", "lqfp64", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L051T6Yx = ["stm32l0x1", "wlcsp36", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L051T8Yx = ["stm32l0x1", "wlcsp36", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052C6Tx = ["stm32l0x2", "lqfp48", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L052C6Ux = ["stm32l0x2", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L052C8Tx = ["stm32l0x2", "lqfp48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052C8Ux = ["stm32l0x2", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052K6Tx = ["stm32l0x2", "lqfp32", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L052K6Ux = ["stm32l0x2", "ufqfpn32", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L052K8Tx = ["stm32l0x2", "lqfp32", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052K8Ux = ["stm32l0x2", "ufqfpn32", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052R6Hx = ["stm32l0x2", "tfbga64", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L052R6Tx = ["stm32l0x2", "lqfp64", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L052R8Hx = ["stm32l0x2", "tfbga64", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052R8Tx = ["stm32l0x2", "lqfp64", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052T6Yx = ["stm32l0x2", "wlcsp36", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L052T8Fx = ["stm32l0x2", "wlcsp36", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L052T8Yx = ["stm32l0x2", "wlcsp36", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L053C6Tx = ["stm32l0x3", "lqfp48", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L053C6Ux = ["stm32l0x3", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L053C8Tx = ["stm32l0x3", "lqfp48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L053C8Ux = ["stm32l0x3", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L053R6Hx = ["stm32l0x3", "tfbga64", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L053R6Tx = ["stm32l0x3", "lqfp64", "io-STM32L051", "eeprom-2048", "flash-32", "ram-8"]
mcu-STM32L053R8Hx = ["stm32l0x3", "tfbga64", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L053R8Tx = ["stm32l0x3", "lqfp64", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L062C8Ux = ["stm32l0x2", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L062K8Tx = ["stm32l0x2", "lqfp32", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L062K8Ux = ["stm32l0x2", "ufqfpn32", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L063C8Tx = ["stm32l0x3", "lqfp48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L063C8Ux = ["stm32l0x3", "ufqfpn48", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L063R8Tx = ["stm32l0x3", "lqfp64", "io-STM32L051", "eeprom-2048", "flash-64", "ram-8"]
mcu-STM32L071C8Tx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L071C8Ux = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-64", "ram-20"]
mcu-STM32L071CBTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071CBUx = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071CBYx = ["stm32l0x1", "wlcsp49", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071CZTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071CZUx = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071CZYx = ["stm32l0x1", "wlcsp49", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071K8Ux = ["stm32l0x1", "ufqfpn32", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L071KBTx = ["stm32l0x1", "lqfp32", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071KBUx = ["stm32l0x1", "ufqfpn32", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071KZTx = ["stm32l0x1", "lqfp32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071KZUx = ["stm32l0x1", "ufqfpn32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071RBHx = ["stm32l0x1", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071RBTx = ["stm32l0x1", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071RZHx = ["stm32l0x1", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071RZTx = ["stm32l0x1", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071V8Ix = ["stm32l0x1", "ufbga100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L071V8Tx = ["stm32l0x1", "lqfp100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L071VBIx = ["stm32l0x1", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071VBTx = ["stm32l0x1", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L071VZIx = ["stm32l0x1", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L071VZTx = ["stm32l0x1", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072CBTx = ["stm32l0x2", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072CBUx = ["stm32l0x2", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072CBYx = ["stm32l0x2", "wlcsp49", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072CZEx = ["stm32l0x2", "ewlcsp49", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072CZTx = ["stm32l0x2", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072CZUx = ["stm32l0x2", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072CZYx = ["stm32l0x2", "wlcsp49", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072KBTx = ["stm32l0x2", "lqfp32", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072KBUx = ["stm32l0x2", "ufqfpn32", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072KZTx = ["stm32l0x2", "lqfp32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072KZUx = ["stm32l0x2", "ufqfpn32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072RBHx = ["stm32l0x2", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072RBIx = ["stm32l0x2", "ufbga64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072RBTx = ["stm32l0x2", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072RZHx = ["stm32l0x2", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072RZIx = ["stm32l0x2", "ufbga64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072RZTx = ["stm32l0x2", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072V8Ix = ["stm32l0x2", "ufbga100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L072V8Tx = ["stm32l0x2", "lqfp100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L072VBIx = ["stm32l0x2", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072VBTx = ["stm32l0x2", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L072VZIx = ["stm32l0x2", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L072VZTx = ["stm32l0x2", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073CBTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L073CBUx = ["stm32l0x3", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L073CZTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073CZUx = ["stm32l0x3", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073CZYx = ["stm32l0x3", "wlcsp49", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073RBHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L073RBTx = ["stm32l0x3", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L073RZHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073RZIx = ["stm32l0x3", "ufbga64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073RZTx = ["stm32l0x3", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073V8Ix = ["stm32l0x3", "ufbga100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L073V8Tx = ["stm32l0x3", "lqfp100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L073VBIx = ["stm32l0x3", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L073VBTx = ["stm32l0x3", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L073VZIx = ["stm32l0x3", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L073VZTx = ["stm32l0x3", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L081CBTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L081CZTx = ["stm32l0x1", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L081CZUx = ["stm32l0x1", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L081KZTx = ["stm32l0x1", "lqfp32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L081KZUx = ["stm32l0x1", "ufqfpn32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L082CZUx = ["stm32l0x2", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L082CZYx = ["stm32l0x2", "wlcsp49", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L082KBTx = ["stm32l0x2", "lqfp32", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L082KBUx = ["stm32l0x2", "ufqfpn32", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L082KZTx = ["stm32l0x2", "lqfp32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L082KZUx = ["stm32l0x2", "ufqfpn32", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L083CBTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L083CZTx = ["stm32l0x3", "lqfp48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L083CZUx = ["stm32l0x3", "ufqfpn48", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L083RBHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L083RBTx = ["stm32l0x3", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L083RZHx = ["stm32l0x3", "tfbga64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L083RZTx = ["stm32l0x3", "lqfp64", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L083V8Ix = ["stm32l0x3", "ufbga100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L083V8Tx = ["stm32l0x3", "lqfp100", "io-STM32L071", "eeprom-3072", "flash-64", "ram-20"]
mcu-STM32L083VBIx = ["stm32l0x3", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L083VBTx = ["stm32l0x3", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-128", "ram-20"]
mcu-STM32L083VZIx = ["stm32l0x3", "ufbga100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]
mcu-STM32L083VZTx = ["stm32l0x3", "lqfp100", "io-STM32L071", "eeprom-6144", "flash-192", "ram-20"]

[profile.dev]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"

[profile.release]
codegen-units = 1
lto = true
debug = true
opt-level = "s"


[[example]]
name = "adc_cont"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "adc_multi"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "adc_trig"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "aes_ecb"
required-features = ["stm32l082"]

[[example]]
name = "aes_cbc"
required-features = ["stm32l082"]

[[example]]
name = "aes_ctr"
required-features = ["stm32l082"]

[[example]]
name = "aes_ctr_dma"
required-features = ["stm32l082"]

[[example]]
name = "button_irq"
required-features = ["rt"]

[[example]]
name = "button_irq_rtic"
required-features = ["rt"]

[[example]]
name = "crc"
required-features = ["stm32l0x2"]

[[example]]
name = "flash"
required-features = ["rt","stm32l082"]

[[example]]
name = "i2c"
required-features = ["rt","stm32l0x2","io-STM32L071"]

[[example]]
name = "i2c_dma"
required-features = ["rt","stm32l0x2","io-STM32L071"]

[[example]]
name = "rng"
required-features = ["rt","stm32l0x2"]

[[example]]
name = "rtc"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "serial"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "serial_dma"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "serial_dma_async"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "serial_lse"
required-features = ["stm32l0x2", "io-STM32L071"]

[[example]]
name = "timer"
required-features = ["rt"]

[[example]]
name = "timer_interrupt_rtic"
required-features = ["rt"]

[[example]]
name = "linked_timer_rtic"
required-features = ["rt", "stm32l0x1", "io-STM32L071"]

[[example]]
name = "adc_pwm"
required-features = ["stm32l0x1"]

[[example]]
name = "usb_serial"
required-features = ["rt", "stm32l0x2", "stm32-usbd"]

[[example]]
name = "temperature"
required-features = ["rt", "stm32l0x2",]
